# FastPCA

./: CMakeLists.txt  LICENSE  LICENSE.txt  README.md  index.html  params.json
doc/: theory.tex
src/: AsciiParser.hpp  AsciiParser.hxx  CMakeLists.txt  covariance.cpp  covariance.h  covariance.hpp  errors.cpp  errors.h  errors.hpp  fastpca.cpp  file_io.cpp  file_io.h  file_io.hpp  file_io.hxx  matrix.cpp  matrix.h  matrix.hpp  matrix.hxx  pca.cpp  util.cpp  util.h  util.hpp  util.hxx
src/xdrfile/: CMakeLists.txt
